[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Board.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.886275, 0.886275, 0.886275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.6, 0.6, 0.6, 1 )
shadow_size = 8

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Board" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 24.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 136.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.0
margin_top = 16.0
margin_right = 38.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.360784, 0.360784, 0.360784, 1 )
text = "Time Left"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.0
margin_top = 72.0
margin_right = 38.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.360784, 0.360784, 0.360784, 1 )
text = "Score"
align = 1

[node name="Panel2" type="Panel" parent="."]
margin_left = 200.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 280.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardCorner" type="Position2D" parent="."]
position = Vector2( 208, 16 )

[node name="LabelTimer" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 54.0
margin_top = 44.0
margin_right = 130.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 54.0
margin_top = 100.0
margin_right = 130.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
text = "0"
align = 1

[node name="BtnRestart" type="Button" parent="."]
margin_left = 24.0
margin_top = 168.0
margin_right = 160.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
